[package]
name = "unirun"
description = "Universal project runner"
version = "0.2.0"
edition = "2021"
authors = ["Mike Rivnak <rivnakm1@gmail.com>"]
license = "MIT"
repository = "https://github.com/rivnakm/unirun"

[[bin]]
name = "uni"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
itertools = "0.14.0"
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
petgraph = "0.7.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
serde_yaml = "0.9.34"
shlex = "1.3.0"
signal-hook = "0.3.17"
